# job-board

./: README.md
backend/: alembic.ini  database.py  pyproject.toml  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 23af4efd3a6f_add_scraping_tables.py  4a5f5b6ec80d_fix_job_application_enum_checks_to_use_.py  5c26914ae481_add_posted_date_to_jobs.py  6d1d6e6fcdcc_add_applications_with_enum_fix_job_.py  9c11b544f87c_add_is_admin_to_users.py  a460e3ad23c9_add_scraping_tables.py  ee6e8edd8416_set_application_url_nulalble_to_false.py  ef0958e88c7a_add_scraping_foreign_keys_to_jobs.py  f78e49e14655_add_scraping_scraping_fields_to_jobs.py  feeaf0c03f80_add_company_size_and_experience_level_.py  ffe00db2e919_add_application_url_to_jobs.py
backend/app/: auth.py  database.py  main.py
backend/app/models/: __init__.py  application.py  base.py  job.py  job_source.py  scraped_job.py  user.py
backend/app/routers/: applications.py  jobs.py  scraping.py  users.py
backend/app/schemas/: __init__.py  application.py  job.py  user.py
backend/app/services/scrapers/: indeed_scraper.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  constants.js  index.css  index.js
frontend/src/components/: ConfirmDialog.js  CreateJobModal.js  EditJobModal.js  JobCard.js  LoginModal.js  ModalPortal.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: ApplicationsPage.js  HomePage.js  JobDetailPage.js
frontend/src/services/: api.js
frontend/src/styles/components/: Button.css  CreateJobModal.css  (+2 more)
(+2 files in other folders)
